java/product_catalog/k8_mongo.yaml

apiVersion: v1
kind: Service
metadata:
  name: pc-mongo
spec:
  selector:
    app: pc-mongo
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 32463
      protocol: TCP
  type: NodePort
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pc-mongo
spec:
  selector:
    matchLabels:
      app: pc-mongo
  template:
    metadata:
      labels:
        app: pc-mongo
    spec:
      containers:
        - name: pc-mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
          - name: storage
            mountPath: /data/db
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: pc-mongo-pvc
