java/product_catalog/k8_mongo_sts_gke.yaml
apiVersion: v1
kind: Service
metadata:
  name: pc-mongo
spec:
  selector:
    app: pc-mongo
  ports:
    - port: 27017
      targetPort: 27017
      # nodePort: 32463
      protocol: TCP
  clusterIP: None
  # type: NodePort
 
    
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pc-mongo
spec:
  selector:
    matchLabels:
      app: pc-mongo
  serviceName: pc-mongo
  replicas: 3
  template:
    metadata:
      labels:
        app: pc-mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: pc-mongo
          image: mongo
          command: 
          - mongod 
          - "--bind_ip_all"
          - "--replSet"
          - rs0
          ports:
            - containerPort: 27017
          volumeMounts:
          - name: mongo-volume
            mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-volume
    spec:
      storageClassName: manual
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 200Mi
