java/product_catalog/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ecommerce-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.sugo.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecommerce-virtual-service
spec:
  hosts:
    - "ecommerce.sugo.com"
  gateways:
    - ecommerce-gateway
  http:
    - match:
        - uri:
            prefix: /product
      route:
        - destination:
            port:
              number: 8080
            host: product-catalog-service
